Closed Bug 1896899 Opened 10 months ago Closed 10 months ago

Thread pane header's message count may be incorrect in synthetic views (conversation/results list)

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 affected, thunderbird128 verified)

RESOLVED FIXED
128 Branch
Tracking Status
thunderbird_esr115 --- affected
thunderbird128 --- verified

People

(Reporter: welpy-cw, Assigned: welpy-cw)

Details

Attachments

(1 file)

Steps to reproduce:

  1. Perform a global search for a term that returns multiple messages, some of which are part of the same thread, and show the results as list.
  2. Select all messages.
  3. Select a single message and delete it.

__Expected result:
The message count matches the count of selected messages after step2 and decreases by one after step 3.

Actual result:
The message count differs from the count of selected messages after step2 (showing only the count of rows in the view) and doesn't change after step 3.

Update the message count when all messages have been loaded and when a message has been deleted.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 128 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/b3abe8658ba7
Fix thread pane header's message count in synthetic views. r=darktrojan,mkmelin

Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED

Hello,
Managed to reproduce this issue with the affected build from 2023-05-31 115.0a1(20230531081622) using Windows 10.
Confirming this issue as verified fixed on 128.0b1(20240610221456) using Windows 10 and Mac Sonoma 14

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: