Bug 1896899 - Fix thread pane header's message count in synthetic views. r=darktrojan,mkmelin

Update the message count when all messages have been loaded and when a message has been deleted.

Differential Revision: https://phabricator.services.mozilla.com/D210487

--HG--
extra : amend_source : fe232cc063cfc39502a94ef1d86cbc480f81fbf6